# Xbot

./: .gitignore  CMakeLists.txt  xmake.lua
src/sample/foot_print_sdf/: CMakeLists.txt  main.cpp
src/sample/knob_cut_img/: knob_cut_img.cpp
src/sample/show_img/: CMakeLists.txt  show_img.cpp
src/sample/show_video/: show_video.cpp
